--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,17 @@
   <title>JS DEV ENV</title>
 </head>
 <body>
-  <h1>JavaScript Development Environment</h1>
+  <h1>Users</h1>
+  <table>
+    <thead>
+      <th>&nbsp;</th>
+      <th>Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </thead>
+    <tbody id="users"></tbody>
+  </table>
   <script src="bundle.js"></script>
 </body>
 </html>
