--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+    <!-- BEGIN TRACKJS -->
     <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
     <script>
       window.TrackJS && TrackJS.install({
-        token: "be846940e638463d9b9762e308a18c7f"
-        // for more configuration options, see https://docs.trackjs.com
+        token: '<%=htmlWebpackPlugin.options.trackJSToken%>'
       });
     </script>
+    <!-- END TRACKJS -->
+  <% } %>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
